--- a/test/expected/layout/some.html
+++ b/test/expected/layout/some.html
@@ -15,28 +15,16 @@
 </head>
 
 <body>
-    <p>test/fixtures/layout/some.md</p>
+    <p>test/fixtures/layout_api/some.md</p>
     <p>tmp/layout/some.html</p>
-    <p>test/fixtures/layout/some.md</p>
+    <p>test/fixtures/layout_api/some.md</p>
     <p>hello world!</p>
-    <h1 id="test">Test</h1>
-    <pre><code class="lang-javascript"><span class="hljs-variable"><span class="hljs-keyword">var</span> a</span> = <span class="hljs-number">10</span>;
-</code></pre>
-    <p>下面是个表格</p>
-    <table>
-        <thead>
-            <tr>
-                <th>key</th>
-                <th>value</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>name</td>
-                <td>helinjiang</td>
-            </tr>
-        </tbody>
-    </table>
+    <p>&lt;!----&gt;
+    </p>
+    <p>&lt;!-- title: Object.prototype date: 2015-11-21--&gt;
+    </p>
+    <h1 id="some">some</h1>
+    <p>I am in layout_api some.md</p>
 
 
     <script>
@@ -47,3 +35,4 @@
 </body>
 
 </html>
+<!-- build in 2015-12-27 23:00:27-->
